--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="89dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <Button
             android:layout_width="match_parent"
@@ -20,8 +22,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -70,10 +71,10 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="request"
-                android:text="REQUEST CRYPTO INFORMATION"
+                android:layout_weight="1"
                 android:maxLines="1"
-                android:layout_weight="1"/>
+                android:onClick="request"
+                android:text="REQUEST CRYPTO INFORMATION" />
 
             <EditText
                 android:id="@+id/requestSuccess"
@@ -82,36 +83,40 @@
                 android:layout_weight="0"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="nothing received yet"/>
+                android:text="nothing received yet" />
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/get_cert"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:onClick="getCertificate"
+                android:text="GET Certificate" />
+
+            <ImageView
+                android:id="@+id/showSuccess"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/get_cert"
+                android:src="@mipmap/ic_success_round"
+                android:visibility="invisible" />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="test"
-                android:text="GET Certificate" />
+                android:id="@+id/get_list"
+                android:layout_gravity="center_vertical|center_horizontal"
+                android:onClick="useCertificate"
+                android:text="USE CERTIFICATE" />
 
         </LinearLayout>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_success_round"
-            android:layout_gravity="center"
-            android:visibility="invisible"
-            />
-        <ImageView
-            android:id="@+id/showSuccess"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_success_round"
-            android:layout_gravity="center"
-            android:visibility="invisible"
-            />
 
 
     </LinearLayout>
