added new activities

--- a/app/src/main/res/layout/activity_crypto.xml
+++ b/app/src/main/res/layout/activity_crypto.xml
@@ -4,22 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:text="Welcome to my App about Certificate Binding:"
-            android:layout_gravity="center_vertical"/>
-    </RelativeLayout>
+    tools:context=".CryptoActivity">
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
