--- a/app/src/main/res/layout/activity_binding.xml
+++ b/app/src/main/res/layout/activity_binding.xml
@@ -9,9 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="89dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/scanBtn"
