--- a/app/src/main/res/layout/activity_binding.xml
+++ b/app/src/main/res/layout/activity_binding.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".BindingActivity">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -117,10 +118,26 @@
 
         </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:fitsSystemWindows="true"
+        android:layout_above="@+id/navigation">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:text="Service Providers:" />
+
         <WebView
             android:id="@+id/webview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:layout_marginBottom="66dp"/>
+    </LinearLayout>
     </LinearLayout>
 
     <android.support.design.widget.BottomNavigationView
@@ -133,6 +150,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation" />
+        app:menu="@menu/navigation"
+        android:layout_alignParentBottom="true"/>
 
 </android.support.constraint.ConstraintLayout>
